changed ruby version from 2.7.1 to 2.7.7

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+.env
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
@@ -36,3 +37,4 @@
 
 # Ignore rubymine project
 .idea
+/node_modules
